--- a/index.html
+++ b/index.html
@@ -5,61 +5,119 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AppLove</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
-      <div>
-        <a>Services</a>
-        <a>Work</a>
-        <a>The team</a>
+      <div class="container">
+        <img class="one" src="assets/images/logo.png" width="5%">
+        <ul>
+        <li><a href="#service">Services</a></li>
+        <li><a href="work">Work</a></li>
+        <li><a href="#the team">The team</a></li>
+      </ul>
       </div>
     </header>
     <section>
-      <div>
+      <div id="ajust" class="conteiner">
+        <!-- <img src="assets/images/bg-home.jpg" width="100%"> -->
         <h2>you just found an untilmate</h2>
         <h1>We are applove from heart</h1>
         <p>handcrafted - modern design - pixel perfect - passioned design</p>
-        <a>View services</a>
+        <a href="view services">View services</a>
       </div>
     </section>
     <section>
-      <div>
+      <div id="pink" class="conteiner">
         <h2>Services</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
-        <div>
+
+      <div id="picture-one" class="conteiner">
+          <img src="assets/images/services-1.png" width="20%">
           <h5>user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
         <div>
-          <h5>concept and ideas</h5>
+          <img src="assets/images/services-2.png" width="20%">
+          <h5>Concep and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
         <div>
+          <img src="assets/images/services-3.png" width="20%">
           <h5>desing and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
           <h6>Identity Design</h6>
         </div>
       </div>
-    </section>
-    <section>
-      <div>
+   </section>
+    <section class="content">
+      <div id="picture-two">
         <h2>work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
+        <img src="assets/images/hero.png "width="100%">
       </div>
-    </section>
+
+        <div><img src="assets/images/work-1.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+        </div>
+       <div>
+        <img src="assets/images/work-2.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+       </div>
+       <div>
+        <img src="assets/images/work-3.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+      </div>
+      <div>
+        <img src="assets/images/work-4.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+      </div>
+      <div>
+        <img src="assets/images/work-5.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+      </div>
+      <div>
+        <img src="assets/images/work-6.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+      </div>
+      <div>
+        <img src="assets/images/work-7.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+      </div>
+      <div>
+        <img src="assets/images/work-8.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+     </div>
+     <div>
+        <img src="assets/images/work-9.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+     </div>
+     <div>
+        <img src="assets/images/work-10.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+     </div>
+     <div>
+        <img src="assets/images/work-11.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+     </div>
+     <div>
+        <img src="assets/images/work-12.jpg"width="30%">
+         <P>NOMBRE DEL PROYECTO</P>
+       </div>
     <footer>
       <p>&#169; Copyright</p>
     </footer>
+  </section>
   </body>
 </html>
