--- a/index.html
+++ b/index.html
@@ -21,36 +21,37 @@
     <section>
       <div id="ajust" class="conteiner">
         <!-- <img src="assets/images/bg-home.jpg" width="100%"> -->
-        <h2>you just found an untilmate</h2>
+        <h3>you just found an untilmate</h3>
         <h1>We are applove from heart</h1>
-        <p>handcrafted - modern design - pixel perfect - passioned design</p>
-        <a href="view services">View services</a>
+        <h5>handcrafted - modern design - pixel perfect - passioned design</h5>
+        <p>View services</p>
       </div>
     </section>
     <section>
       <div id="pink" class="conteiner">
-        <h2>Services</h2>
+        <h2 class="big">Services</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
 
-      <div id="picture-one" class="conteiner">
-          <img src="assets/images/services-1.png" width="20%">
+     <conteiner-one id="services">
+      <div>
+          <img src="assets/images/services-1.png" width="30%">
           <h5>user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
         <div>
-          <img src="assets/images/services-2.png" width="20%">
+          <img src="assets/images/services-2.png" width="30%">
           <h5>Concep and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
         <div>
-          <img src="assets/images/services-3.png" width="20%">
+          <img src="assets/images/services-3.png" width="30%">
           <h5>desing and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
@@ -59,62 +60,64 @@
       </div>
    </section>
     <section class="content">
-      <div id="picture-two">
-        <h2>work</h2>
+      <div id="picture-one">
+        <h2 class="big">work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
         <img src="assets/images/hero.png "width="100%">
       </div>
-
-        <div><img src="assets/images/work-1.jpg"width="30%">
+     <section id="name">
+      <div>
+        <img src="assets/images/work-1.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
         </div>
        <div>
-        <img src="assets/images/work-2.jpg"width="30%">
+        <img src="assets/images/work-2.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
        </div>
        <div>
-        <img src="assets/images/work-3.jpg"width="30%">
+        <img src="assets/images/work-3.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
       </div>
       <div>
-        <img src="assets/images/work-4.jpg"width="30%">
+        <img src="assets/images/work-4.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
       </div>
       <div>
-        <img src="assets/images/work-5.jpg"width="30%">
+        <img src="assets/images/work-5.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
       </div>
       <div>
-        <img src="assets/images/work-6.jpg"width="30%">
+        <img src="assets/images/work-6.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
       </div>
       <div>
-        <img src="assets/images/work-7.jpg"width="30%">
+        <img src="assets/images/work-7.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
       </div>
       <div>
-        <img src="assets/images/work-8.jpg"width="30%">
+        <img src="assets/images/work-8.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
      </div>
      <div>
-        <img src="assets/images/work-9.jpg"width="30%">
+        <img src="assets/images/work-9.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
      </div>
      <div>
-        <img src="assets/images/work-10.jpg"width="30%">
+        <img src="assets/images/work-10.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
      </div>
      <div>
-        <img src="assets/images/work-11.jpg"width="30%">
+        <img src="assets/images/work-11.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
      </div>
      <div>
-        <img src="assets/images/work-12.jpg"width="30%">
+        <img src="assets/images/work-12.jpg"width="290px">
          <P>NOMBRE DEL PROYECTO</P>
        </div>
+   </section>
     <footer>
       <p>&#169; Copyright</p>
     </footer>
