--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
-      <div class="container">
+    <header >
+      <div>
         <img class="one" src="assets/images/logo.png" width="5%">
         <ul>
-        <li><a href="#service">Services</a></li>
+        <li><a href="service">Services</a></li>
         <li><a href="work">Work</a></li>
-        <li><a href="#the team">The team</a></li>
+        <li><a href="the team">The team</a></li>
       </ul>
       </div>
     </header>
     <section>
-      <div id="ajust" class="conteiner">
+      <div id="ajust"  class="container">
         <!-- <img src="assets/images/bg-home.jpg" width="100%"> -->
-        <h3>you just found an untilmate</h3>
+        <h2>you just found an untilmate</h2>
         <h1>We are applove from heart</h1>
         <h5>handcrafted - modern design - pixel perfect - passioned design</h5>
-        <p>View services</p>
+        <a>View services</a>
       </div>
     </section>
     <section>
-      <div id="pink" class="conteiner">
+      <div id="pink" >
         <h2 class="big">Services</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
@@ -37,7 +37,7 @@
 
      <conteiner-one id="services">
       <div>
-          <img src="assets/images/services-1.png" width="30%">
+          <img src="assets/images/services-1.png" width="40%">
           <h5>user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
@@ -69,58 +69,73 @@
         <img src="assets/images/hero.png "width="100%">
       </div>
      <section id="name">
-      <div>
-        <img src="assets/images/work-1.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
+       <div class="ajust">
+         <div>
+           <img src="assets/images/work-1.jpg"width="300px">
+           <P>NOMBRE DEL PROYECTO</P>
+         </div>
+         <div>
+           <img src="assets/images/work-2.jpg"width="300px">
+           <P>NOMBRE DEL PROYECTO</P>
+         </div>
+         <div>
+           <img src="assets/images/work-3.jpg"width="300px">
+           <P>NOMBRE DEL PROYECTO</P>
+         </div>
+       </div>
+
+       <div class="ajust">
+         <div>
+           <img src="assets/images/work-4.jpg"width="300px">
+           <P>NOMBRE DEL PROYECTO</P>
+         </div>
+         <div>
+           <img src="assets/images/work-5.jpg"width="300px">
+           <P>NOMBRE DEL PROYECTO</P>
+         </div>
+         <div>
+           <img src="assets/images/work-6.jpg"width="300px">
+           <P>NOMBRE DEL PROYECTO</P>
+         </div>
+      </div>
+
+      <div class="ajust">
+        <div>
+          <img src="assets/images/work-7.jpg"width="300px">
+          <P>NOMBRE DEL PROYECTO</P>
         </div>
-       <div>
-        <img src="assets/images/work-2.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-       </div>
-       <div>
-        <img src="assets/images/work-3.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
+        <div>
+          <img src="assets/images/work-8.jpg"width="300px">
+          <P>NOMBRE DEL PROYECTO</P>
+        </div>
+        <div>
+          <img src="assets/images/work-9.jpg"width="300px">
+          <P>NOMBRE DEL PROYECTO</P>
+        </div>
       </div>
-      <div>
-        <img src="assets/images/work-4.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
+
+      <div class="ajust">
+        <div>
+          <img src="assets/images/work-10.jpg"width="300px">
+          <P>NOMBRE DEL PROYECTO</P>
+        </div>
+        <div>
+          <img src="assets/images/work-11.jpg"width="300px">
+          <P>NOMBRE DEL PROYECTO</P>
+        </div>
+        <div>
+          <img src="assets/images/work-12.jpg"width="300px">
+          <P>NOMBRE DEL PROYECTO</P>
+        </div>
       </div>
-      <div>
-        <img src="assets/images/work-5.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-      </div>
-      <div>
-        <img src="assets/images/work-6.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-      </div>
-      <div>
-        <img src="assets/images/work-7.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-      </div>
-      <div>
-        <img src="assets/images/work-8.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-     </div>
-     <div>
-        <img src="assets/images/work-9.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-     </div>
-     <div>
-        <img src="assets/images/work-10.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-     </div>
-     <div>
-        <img src="assets/images/work-11.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-     </div>
-     <div>
-        <img src="assets/images/work-12.jpg"width="290px">
-         <P>NOMBRE DEL PROYECTO</P>
-       </div>
-   </section>
-    <footer>
-      <p>&#169; Copyright</p>
-    </footer>
-  </section>
+    </section>
+
+<section>
+  <footer>
+    <p>&#169; Copyright</p>
+  </footer>
+
+</section>
+
   </body>
 </html>
